<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.milan.rezervacni_formular.RezervaceActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/name_surname"
                android:id="@+id/nameField"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/address"
                android:id="@+id/addressField"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/phone"
                android:id="@+id/phoneField"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/mail"
                android:layout_marginBottom="20dp"
                android:id="@+id/mailField"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </DatePicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_count"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner">
            </Spinner>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="20dp"
                    android:background="#79bb53"
                    android:layout_marginRight="20dp"
                    android:id="@+id/sendButton"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="20dp"
                    android:background="#f25959"
                    android:id="@+id/cancelButton"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
